# econversion-nomad

./: .gitignore  README.md  setup.sh
docs/: ATTRIBUTION.md
docs/elabftw-integration/: 01-installation-guide.md  02-elabftw-connection-guide.md  03-user-guide.md  04-three-way-sync.md  user-guide.html
docs/installation/: 01-oasis-deployment.md  02-elabftw-plugin-install.md
docs/instrument-automation/: 01-workflow-overview.md  02-infrastructure.md  03-elabftw-templates.md  04-elab-app.md  05-data-pipeline.md  README.md  USER_GUIDE.md
plugins/: startup.sh
plugins/elabftw_linker/: __init__.py  normalizer.py  schema.py  sync.py
plugins/instrument_data/: __init__.py  elabftw_client.py  mock_normalizer.py  mock_run.py  schema.py
plugins/three_way_sync/: __init__.py  config.yaml.template  entrypoint.py  normalizer.py  pyproject.toml  schema.py  webhook.py
plugins/three_way_sync/configs/: user_template.yaml
scripts/: instrument_ingest.py  mock_trios_run.py  patch-nomad-distro.py
