[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "three-way-nomad-bridge"
description = "Bidirectional elabFTW NOMAD integration"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pyyaml",
]

[project.entry-points."nomad.plugin"]
bridge-schema = "three_way_sync.entrypoint:bridge_schema"

[tool.setuptools.packages.find]
where = ["."]
include = ["three_way_sync*"]
